--- a/public/index.html
+++ b/public/index.html
@@ -137,7 +137,7 @@ if (!doNotTrack) {
 	            <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
                 <div class="summary">
-                    <p>Experienced data professional with seasoned expertise in sql, python, aws, airflow.</p>
+                    <p>Experienced data professional with experience with advanced SQL, python, aws, airflow, &amp; git/github. Studying for <a href="https://aws.amazon.com/certification/certified-solutions-architect-associate/">AWS Solutions Architect Associate</a> exam. Complex problem solving is my driving force where I aim to study and understand the problem to the core and build a solution up from there, allowing flexibility for future variances of today&rsquo;s problem.</p>
                 </div>
             </section>
 
@@ -159,13 +159,12 @@ if (!doNotTrack) {
                     <div class="details">
                         <p><p>Our team is the analytical and technical support for our client success teams. Our work provided automated, multifaceted campaign results via a multitude of tools include SQL, Spark, Python, Hive, and Apache Airflow.</p>
 <ul>
-<li>Authored pyspark/airflow pipeline to calculate program results, storing results in s3.</li>
+<li>Authored pyspark/airflow ETL pipeline to calculate program results, storing results in s3 for nightly ingestion to our snowflake datastore feeding <a href="https://looker.com/">looker</a> dasbhoards &amp; explores.</li>
 <li>Technical lead on our AB testing pipeline in object-oriented pyspark and airflow to measure statistical effectiveness of Ibotta platform.</li>
+<li>Query optimization liason for our team, consulting with our team on efficient SQL structure and operations to help reduce run time and compute resources.</li>
 <li>Automated the power analysis to determine optimal control sizes along with stratifying the groups to ensure similar behavior across the treatment &amp; control.</li>
-<li>Ported repeated data analysis scripts into our internal python package for reproducibility and version management.</li>
-<li>Compiled campaign meta data via python in varying structures from S3, old Excel files local &amp; Google Drive, and an internal API into one structured data set.</li>
+<li>Ported repeated data analysis scripts into our internal python package for reproducibility and version control.</li>
 <li>Addressing continual support requests with adding functionality to our internal python module for rest of the team to use.</li>
-<li>Provide adhoc support as required from our client success teams.</li>
 </ul>
 </p>
                     </div>
